src/styles/blog.module.scss
.header {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  margin: 10rem 0;
  font-family: var(--serif);

  > * {
    font-size: 1rem;
    margin: 0;
    max-width: 90ch;
    text-align: center;
  }

  h1 {
    font-size: 2.1rem;
  }

  p {
    font-size: 1.3rem;
    color: var(--colTextSecondary);
  }
}

.thumbnail {
  border-radius: 8px;
}

main.articles {
  color: var(--colText);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 120px;
  padding: 0 1rem;
  margin-bottom: 8rem;

  > * {
    max-width: 600px;
  }

  > .hasThumbnail {
    width: 100%;
    padding: 24px;
    border-radius: 8px;
    background: radial-gradient(
      99.85% 100% at 49.92% 100%,
      rgba(250, 92, 0, 0.132) 0%,
      rgba(255, 179, 215, 0.09) 100%
    );

    .date {
      margin: 0;
    }
  }

  h2,
  a {
    font-size: 1.8rem;
    text-align: center;
    font-family: var(--serif);
    border: none;
    margin: 0;
  }

  .date {
    color: var(--colTextSecondary);
    font-size: 1.1rem;
    margin-top: 18px;
  }

  .extLinkIcon {
    height: 0.9rem;
    width: auto;
    margin-right: 0.8rem;
  }
}

